tests/lang-features/comma.stderr
Error: Potential leak detected
    ╭─[preproccessed_file.c:1:1]
    │
 31 │     void *p1 = (malloc(5), 0);
    │                 ────┬────  
    │                     ╰────── Ownership of the value transferred to this function here
    │ 
 35 │     return 0;
    │     ────┬────  
    │         ╰────── Function exited without proper destruction of that value
────╯